--- a/client/package.json
+++ b/client/package.json
@@ -1,36 +1,35 @@
 {
-  "name": "gandlafai",
+  "name": "react-vite-modal-quick-start",
   "private": true,
   "version": "0.0.0",
   "type": "module",
   "scripts": {
+    "start": "vite",
     "dev": "vite",
-    "build": "vite build",
-    "lint": "eslint .",
-    "preview": "vite preview"
+    "build": "tsc && vite build",
+    "preview": "vite preview",
+    "lint": "eslint"
   },
+  "//IMP START": "IMP START - Web3Auth Installation",
   "dependencies": {
-    "@tanstack/react-query": "^5.51.23",
-    "cuid": "^3.0.0",
+    "@web3auth/base": "^8.12.2",
+    "@web3auth/ethereum-provider": "^8.12.3",
+    "@web3auth/modal": "^8.12.3",
+    "empty-module": "^0.0.2",
+    "ethers": "^6.13.2",
     "react": "^18.3.1",
-    "react-color": "^2.19.3",
-    "react-colorful": "^5.6.1",
     "react-dom": "^18.3.1",
-    "react-input-color": "^4.0.1",
-    "styled-components": "^6.1.13",
-    "viem": "^2.19.6",
-    "wagmi": "^2.12.5"
+    "viem": "^2.19.1",
+    "web3": "^4.11.1"
   },
+  "//IMP END": "IMP END - Web3Auth Installation",
   "devDependencies": {
-    "@eslint/js": "^9.9.0",
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
-    "@vitejs/plugin-react-swc": "^3.5.0",
-    "eslint": "^9.9.0",
-    "eslint-plugin-react": "^7.35.0",
-    "eslint-plugin-react-hooks": "^5.1.0-rc.0",
-    "eslint-plugin-react-refresh": "^0.4.9",
-    "globals": "^15.9.0",
-    "vite": "^5.4.1"
+    "@vitejs/plugin-react": "^4.3.1",
+    "buffer": "^6.0.3",
+    "process": "^0.11.10",
+    "typescript": "^5.5.4",
+    "vite": "^5.4.0"
   }
 }
