--- a/client/package.json
+++ b/client/package.json
@@ -12,6 +12,7 @@
   },
   "//IMP START": "IMP START - Web3Auth Installation",
   "dependencies": {
+    "@tableland/sdk": "^7.2.1",
     "@web3auth/base": "^8.12.2",
     "@web3auth/ethereum-provider": "^8.12.3",
     "@web3auth/modal": "^8.12.3",
