update game logic, rename project to Frodo AI

--- a/web3/package.json
+++ b/web3/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "gandalfai",
+  "name": "frodoai",
   "version": "0.0.0",
   "description": "Quiz game powered by Web3 and AI",
   "engines": {
