--- a/web3/tsconfig.json
+++ b/web3/tsconfig.json
@@ -6,7 +6,8 @@
     "esModuleInterop": true,
     "forceConsistentCasingInFileNames": true,
     "strict": true,
-    "skipLibCheck": true
+    "skipLibCheck": true,
+    "resolveJsonModule": true
   },
   "include": ["./test", "./scripts"],
   "files": ["./hardhat.config.ts"]
