--- a/client/package.json
+++ b/client/package.json
@@ -17,6 +17,7 @@
     "@web3auth/base": "^8.12.2",
     "@web3auth/ethereum-provider": "^8.12.3",
     "@web3auth/modal": "^8.12.3",
+    "@web3auth/modal-react-hooks": "^8.13.0",
     "empty-module": "^0.0.2",
     "ethers": "^6.13.2",
     "react": "^18.3.1",
