--- a/client/package.json
+++ b/client/package.json
@@ -15,6 +15,7 @@
     "@biconomy/account": "^4.6.1",
     "@tableland/sdk": "^7.2.1",
     "@web3auth/base": "^8.12.2",
+    "@web3auth/default-evm-adapter": "^8.12.4",
     "@web3auth/ethereum-provider": "^8.12.3",
     "@web3auth/modal": "^8.12.3",
     "@web3auth/modal-react-hooks": "^8.13.0",
