--- a/web3/package.json
+++ b/web3/package.json
@@ -1,71 +1,22 @@
 {
-  "name": "frodoai",
-  "version": "0.0.0",
-  "description": "Quiz game powered by Web3 and AI",
-  "engines": {
-    "node": ">=18.0.0"
-  },
+  "name": "examples",
+  "version": "1.0.0",
+  "description": "",
   "scripts": {
-    "build": "hardhat compile",
-    "clean": "hardhat clean && rm -rf artifacts && rm -rf cache && rm -rf coverage && rm -f coverage.json",
-    "up": "npm install && npm run build && hardhat node --network local-tableland",
-    "lt": "hardhat node --network local-tableland",
-    "deploy": "hardhat run scripts/deploy.ts --network",
-    "deploy:up": "hardhat run scripts/deploy.ts --network localhost",
-    "deploy:local": "hardhat run scripts/deploy.ts --network local-tableland",
-    "test": "hardhat coverage && istanbul check-coverage ./coverage.json --statements 100 --branches 95 --functions 100 --lines 100",
-    "test:gas": "REPORT_GAS=true hardhat test",
-    "lint:ts": "eslint '**/*.{js,ts}'",
-    "lint:sol": "solhint 'contracts/**/*.sol'",
-    "lint": "npm run lint:ts && npm run lint:sol",
-    "lint:fix": "npm run lint:ts -- --fix && npm run lint:sol -- --fix",
-    "prettier": "prettier '**/*.{js,ts,json,sol,md}' --check",
-    "prettier:fix": "npm run prettier -- --write",
-    "format": "npm run prettier:fix && npm run lint:fix",
-    "verify": "hardhat run scripts/verify.ts --network",
-    "query": "hardhat run scripts/query.ts",
-    "chat": "ts-node ai/ask_ai.ts"
+    "chat": "ts-node chat.ts",
+    "simpleChat": "ts-node simpleLlmChat.ts",
+    "chat_vision": "ts-node chat_vision.ts",
+    "chat_anthropic": "ts-node chat_anthropic.ts",
+    "agent": "ts-node agent.ts"
   },
-  "keywords": [
-    "tableland",
-    "hardhat",
-    "sql"
-  ],
+  "author": "",
+  "license": "ISC",
   "devDependencies": {
-    "@nomicfoundation/hardhat-chai-matchers": "^2.0.6",
-    "@nomicfoundation/hardhat-ethers": "^3.0.5",
-    "@nomicfoundation/hardhat-network-helpers": "^1.0.10",
-    "@nomicfoundation/hardhat-toolbox": "^5.0.0",
-    "@nomicfoundation/hardhat-verify": "^2.0.6",
-    "@openzeppelin/contracts-upgradeable": "^4.9.6",
-    "@openzeppelin/hardhat-upgrades": "^3.0.5",
-    "@tableland/hardhat": "^0.0.9",
-    "@tableland/local": "^3.0.0",
-    "@tableland/sdk": "^7.0.0",
-    "@typechain/hardhat": "^9.1.0",
-    "@types/chai": "^4.3.14",
-    "@types/chai-as-promised": "^7.1.8",
-    "@types/mocha": "^10.0.6",
-    "@typescript-eslint/eslint-plugin": "^5.62.0",
-    "@typescript-eslint/parser": "^5.62.0",
-    "chai-as-promised": "^7.1.1",
-    "dotenv": "^16.3.1",
-    "erc721a-upgradeable": "^4.2.3",
-    "eslint": "^8.53.0",
-    "eslint-config-prettier": "^8.10.0",
-    "eslint-config-standard": "^17.1.0",
-    "hardhat": "^2.22.3",
-    "hardhat-contract-sizer": "^2.10.0",
-    "hardhat-dependency-compiler": "^1.1.4",
-    "hardhat-gas-reporter": "^1.0.10",
-    "prettier": "^3.2.5",
-    "prettier-plugin-solidity": "^1.3.1",
-    "solhint": "^4.5.4",
-    "solidity-coverage": "^0.8.12",
-    "ts-node": "^10.9.2"
+    "ts-node": "^10.9.2",
+    "typescript": "^5.4.2"
   },
   "dependencies": {
-    "@openzeppelin/contracts": "^4.9.6",
-    "@tableland/evm": "^6.1.0"
+    "ethers": "^6.11.1",
+    "dotenv": "^16.4.4"
   }
 }
