--- a/web3/tsconfig.json
+++ b/web3/tsconfig.json
@@ -1,14 +1,11 @@
 {
   "compilerOptions": {
-    "lib": ["es6"],
-    "target": "es2020",
-    "module": "commonjs",
+    "target": "es2016",
+    "module": "NodeNext",
     "esModuleInterop": true,
+    "resolveJsonModule": true,
     "forceConsistentCasingInFileNames": true,
     "strict": true,
-    "skipLibCheck": true,
-    "resolveJsonModule": true
-  },
-  "include": ["./test", "./scripts"],
-  "files": ["./hardhat.config.ts"]
+    "skipLibCheck": true
+  }
 }
