--- a/client/package.json
+++ b/client/package.json
@@ -21,6 +21,7 @@
     "ethers": "^6.13.2",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "ulid": "^2.3.0",
     "viem": "^2.19.1",
     "web3": "^4.11.1"
   },
