--- a/client/package.json
+++ b/client/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "react-vite-modal-quick-start",
+  "name": "frodo-ai-client",
   "private": true,
   "version": "0.0.0",
   "type": "module",
@@ -10,7 +10,6 @@
     "preview": "vite preview",
     "lint": "eslint"
   },
-  "//IMP START": "IMP START - Web3Auth Installation",
   "dependencies": {
     "@web3auth/base": "^8.12.2",
     "@web3auth/default-evm-adapter": "^8.12.4",
@@ -25,7 +24,6 @@
     "viem": "^2.19.1",
     "web3": "^4.11.1"
   },
-  "//IMP END": "IMP END - Web3Auth Installation",
   "devDependencies": {
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
