--- a/web3/package.json
+++ b/web3/package.json
@@ -1,13 +1,9 @@
 {
-  "name": "examples",
+  "name": "frodo-ai-web3",
   "version": "1.0.0",
   "description": "",
   "scripts": {
-    "chat": "ts-node chat.ts",
-    "simpleChat": "ts-node simpleLlmChat.ts",
-    "chat_vision": "ts-node chat_vision.ts",
-    "chat_anthropic": "ts-node chat_anthropic.ts",
-    "agent": "ts-node agent.ts"
+    "chat": "ts-node chat.ts"
   },
   "author": "",
   "license": "ISC",
